@@ -1,3 +1,7 @@
+2010-09-25  Dustin J. Mitchell <dustin@zmanda.com>
+	* common-src/alloc.c: remove amtable functions
+	* common-src/amanda.h: remove prototypes
+
 2010-09-24  Jean-Louis Martineau <martineau@zmanda.com>
 	* application-src/amstar.c: Check root can cd to the directory.
 
